--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,47 +59,12 @@ elseif(MSVC)
 endif()
 target_compile_options(${PROJECT_NAME} PRIVATE ${WARNINGS})
 
+# Configure versioning information
 set_target_properties(${PROJECT_NAME}
 	PROPERTIES
 	VERSION ${PROJECT_VERSION}
 	SOVERSION ${PROJECT_VERSION_MAJOR}
 )
-
-if (${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_SOURCE_DIR})
-	include(GNUInstallDirs)
-
-	set(CROSSGUID_INC_INSTALL_DIR "${CMAKE_INSTALL_INCLUDEDIR}")
-	set(CROSSGUID_RUNTIME_INSTALL_DIR "${CMAKE_INSTALL_BINDIR}")
-	set(CROSSGUID_LIBRARY_INSTALL_DIR "${CMAKE_INSTALL_LIBDIR}")
-	set(CROSSGUID_ARCHIVE_INSTALL_DIR "${CMAKE_INSTALL_LIBDIR}")
-	set(CROSSGUID_FRAMEWORK_INSTALL_DIR "${CMAKE_INSTALL_LIBDIR}")
-
-	set(CROSSGUID_CMAKE_CONFIG_INSTALL_DIR "${CMAKE_INSTALL_DATADIR}/crossguid/cmake")
-	set(CROSSGUID_ADDITIONAL_FILES_INSTALL_DIR "${CMAKE_INSTALL_DATADIR}/crossguid")
-
-	# Install target
-	install(TARGETS ${PROJECT_NAME} EXPORT crossguidTargets
-		RUNTIME       DESTINATION ${CROSSGUID_RUNTIME_INSTALL_DIR}
-		LIBRARY       DESTINATION ${CROSSGUID_LIBRARY_INSTALL_DIR}
-		ARCHIVE       DESTINATION ${CROSSGUID_ARCHIVE_INSTALL_DIR}
-		FRAMEWORK     DESTINATION ${CROSSGUID_FRAMEWORK_INSTALL_DIR})
-
-	# Install headers
-	install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/"
-		DESTINATION ${CROSSGUID_INC_INSTALL_DIR})
-
-	# Make cmake config files for all targets
-	install(EXPORT  crossguidTargets
-		DESTINATION ${CROSSGUID_CMAKE_CONFIG_INSTALL_DIR}
-		FILE crossguid-config.cmake)
-
-	# Install readme and license
-	install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE" "${CMAKE_CURRENT_SOURCE_DIR}/README.md"
-		DESTINATION ${CROSSGUID_ADDITIONAL_FILES_INSTALL_DIR})
-
-	configure_file(crossguid.pc.in ${PROJECT_BINARY_DIR}/crossguid.pc @ONLY)
-	install(FILES ${PROJECT_BINARY_DIR}/crossguid.pc DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}/pkgconfig)
-endif()
 
 if (CROSSGUID_TESTS)
     add_executable(crossguid-test test/TestMain.cpp test/Test.cpp)
