Move implementation details to internal header.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,8 +42,7 @@ elseif(APPLE)
     )
     target_compile_definitions(${PROJECT_NAME} PRIVATE GUID_CFUUID)
 elseif(ANDROID)
-    # GUID_ANDROID is used in the headers, so make PUBLIC
-    target_compile_definitions(${PROJECT_NAME} PUBLIC GUID_ANDROID)
+    target_compile_definitions(${PROJECT_NAME} PRIVATE GUID_ANDROID)
 else()
     find_package(LibUUID REQUIRED)
     if (NOT LIBUUID_FOUND)
